--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <form action="https://yourdomain.my.salesforce.com/servlet/servlet.WebToCase" method="POST">
     <input type="hidden" name="orgid" value="00DQy00000LUxg7">
-    <input type="hidden" name="retURL" value="https://resourceful-koala-q807sc-dev-ed.trailblaze.lightning.force.com/">
+    <input type="hidden" name="retURL" value="resourceful-koala-q807sc-dev-ed.trailblaze.my.salesforce.com">
     <input type="hidden" name="eventName" value="{!Event_Name__c}">
     
     <label for="subject">Subject:</label>
